--- a/PrompimanFront/src/app/master-detail/master-detail.page.html
+++ b/PrompimanFront/src/app/master-detail/master-detail.page.html
@@ -50,26 +50,32 @@
 
         <ion-card>
           <ion-card-content>
-            <ion-row class="ion-text-center">
-              <ion-col size="2">
-                ชื่อกรุ๊ป
-              </ion-col>
-              <ion-col size="2">
-                เบอร์โทร
-              </ion-col>
-              <ion-col size="2">
-                Bednight
-              </ion-col>
-              <ion-col size="2">
-                เหลือวันพัก
-              </ion-col>
-              <ion-col size="2">
-                วันที่เข้า
-              </ion-col>
-              <ion-col size="2">
-                วันที่ออก
-              </ion-col>
-            </ion-row>
+            <ng-container
+              *ngFor="let p of paging.dataList  | paginate: { itemsPerPage: 10, currentPage: p ,totalItems: paging.count}">
+              <ion-row class="ion-text-center">
+                <ion-col size="2">
+                  ชื่อกรุ๊ป {{p.groupName}}
+                </ion-col>
+                <ion-col size="2">
+                  {{p.telephone}}
+                </ion-col>
+                <ion-col size="2">
+                  Bednight
+                </ion-col>
+                <ion-col size="2">
+                  <!-- {{calDay( p.checkOutDate ,p.checkInDate)}} -->
+                </ion-col>
+                <ion-col size="2">
+                  {{p.checkInDate | date:"dd/MM/yyyy" }}
+                </ion-col>
+                <ion-col size="2">
+                  {{p.checkOutDate | date:"dd/MM/yyyy" }}
+                </ion-col>
+              </ion-row>
+            </ng-container>
+            <!-- <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
+            <pagination-controls (pageChange)="pageNumber = $event" (click)="search2(searchBar.value,pageNumber)">
+            </pagination-controls> -->
           </ion-card-content>
         </ion-card>
       </ion-list>
