--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -44,7 +44,7 @@
     </ion-card-header>
   </ion-card>
 
-  <ion-card >
+  <ion-card>
     <ion-card-content>
       <ion-item lines="none" class="ion-text-center"
         *ngFor="let item of paging.dataList  | paginate: { itemsPerPage: 10, currentPage: p ,totalItems: paging.count}">
@@ -69,11 +69,13 @@
           </ion-item>
         </ion-col>
         <ion-col size="1.5">
-          <ion-button size="default" expand="block" type="submit" [routerLink]="['/checkin/', item._id]">Check In</ion-button>
+          <ion-button size="default" expand="block" type="submit" [routerLink]="['/checkin/', item._id]">Check In
+          </ion-button>
         </ion-col>
       </ion-item>
       <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
-      <pagination-controls (pageChange)="pageNumber = $event" (click)="search2(searchBar.value,pageNumber)"></pagination-controls>
+      <pagination-controls (pageChange)="pageNumber = $event" (click)="search2(searchBar.value,pageNumber)">
+      </pagination-controls>
       <!-- (click)="search(p)" -->
     </ion-card-content>
   </ion-card>
