fix argument para api

--- a/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
+++ b/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
@@ -73,7 +73,7 @@
     <ion-card>
       <ion-card-content>
         <ng-container *ngFor="let r of roomsAct">
-          <ion-row class="ion-text-center" (click)="costDetail4EachRoom(r.roomNo)">
+          <ion-row class="ion-text-center" (click)="costDetail4EachRoom(r._id)">
             <ion-col size="1"></ion-col>
             <ion-col size="2">
               <ion-item class="ion-text-center">
