--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -105,11 +105,11 @@
         </ion-item>
         <ion-item class="ion-text-left">
           <ion-label>ค่ามัดจัด</ion-label>
-          <ion-checkbox slot="start" checked="true" (ionChange)="isReserve()"></ion-checkbox>
+          <ion-checkbox slot="start" checked="true" (ionChange)="isReserve($event)"></ion-checkbox>
         </ion-item>
         <ion-item class="ion-text-left">
           <ion-label>ใบกำกับภาษี</ion-label>
-          <ion-checkbox slot="start" (ionChange)="isReserve2()"></ion-checkbox>
+          <ion-checkbox slot="start" (ionChange)="isReserve2($event)"></ion-checkbox>
         </ion-item>
       </ion-col>
       <ion-col size="6.5">
