--- a/PrompimanFront/src/app/cost-detail/cost-detail.page.html
+++ b/PrompimanFront/src/app/cost-detail/cost-detail.page.html
@@ -18,8 +18,7 @@
       </ion-col>
       <ion-col size="3">
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]="masterCheck"
-          (click)="checkMaster($event)"></ion-checkbox>
+          <ion-checkbox slot="start" [(ngModel)]="masterCheck" (click)="checkMaster($event)"></ion-checkbox>
           <ion-label><strong>เลือกทั้งหมด</strong></ion-label>
         </ion-item>
       </ion-col>
@@ -39,9 +38,8 @@
               <ion-label>{{ item2.totalCost }}</ion-label>
             </ion-col>
             <!-- checked="{{ item2.isSelected }}" disabled="{{ item2.isPaid }}" -->
-            <ion-checkbox slot="start"
-            [(ngModel)]="item2.isSelected" 
-            (click)="onClick(item2,item.roomNo)"></ion-checkbox>
+            <ion-checkbox slot="start" [(ngModel)]="item2.isSelected" (click)="change2(item2,item.roomNo)"
+              disabled="{{ item2.isPaid == true && item2.isSelected == true }}" checked="{{ item2.isSelected }}"></ion-checkbox>
             <!-- Todo: add in checkbox (ionChange)="change(item2, item.room (ionChange)="checkEvent($event)")" -->
           </ion-item>
         </ion-col>
@@ -77,7 +75,7 @@
       </ion-col>
       <ion-col size="1.2"></ion-col>
       <ion-col size="2.5">
-        <ion-item lines="none" style="color: red;" >
+        <ion-item lines="none" style="color: red;">
           <h3>
             ยอดที่เลือกชำระ
           </h3>
@@ -86,7 +84,7 @@
       <ion-col size="1.5">
         <ion-item lines="none" style="color: red;">
           <h3>
-            5000
+            {{ costSelect }}
           </h3>
         </ion-item>
       </ion-col>
