--- a/PrompimanFront/src/app/master-detail/master-detail.page.html
+++ b/PrompimanFront/src/app/master-detail/master-detail.page.html
@@ -52,7 +52,7 @@
           <ion-card-content>
             <ng-container
               *ngFor="let p of paging.dataList  | paginate: { itemsPerPage: 10, currentPage: p ,totalItems: paging.count}">
-              <ion-row class="ion-text-center">
+              <ion-row class="ion-text-center" [routerLink]="['/checkin-detail/', p._id]">
                 <ion-col size="2">
                   ชื่อกรุ๊ป {{p.groupName}}
                 </ion-col>
@@ -73,9 +73,9 @@
                 </ion-col>
               </ion-row>
             </ng-container>
-            <!-- <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
-            <pagination-controls (pageChange)="pageNumber = $event" (click)="search2(searchBar.value,pageNumber)">
-            </pagination-controls> -->
+            <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
+            <pagination-controls (pageChange)="pageNumber = $event" (click)="search(paging.page)">
+            </pagination-controls>
           </ion-card-content>
         </ion-card>
       </ion-list>
@@ -133,6 +133,9 @@
                 </ion-col>
               </ion-row>
             </ng-container>
+            <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
+            <pagination-controls (pageChange)="pageNumber = $event" (click)="search(paging.page)">
+            </pagination-controls>
           </ion-card-content>
         </ion-card>
       </ion-list>
@@ -194,6 +197,9 @@
                 </ion-col>
               </ion-row>
             </ng-container>
+            <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
+            <pagination-controls (pageChange)="pageNumber = $event" (click)="search(paging.page)">
+            </pagination-controls>
           </ion-card-content>
         </ion-card>
       </ion-list>
@@ -251,6 +257,9 @@
                 </ion-col>
               </ion-row>
             </ng-container>
+            <h1 *ngIf="this.paging.count == 0" class="ion-text-center">ไม่พบสิ่งที่ค้นหา</h1>
+            <pagination-controls (pageChange)="pageNumber = $event" (click)="search(paging.page)">
+            </pagination-controls>
           </ion-card-content>
         </ion-card>
       </ion-list>
