--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -54,7 +54,7 @@
           <ion-label>{{fg.get('reserve').value}}</ion-label>
         </ion-item>
         <ion-item>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล" value="{{fg.get('name').value}}">
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล" (ionChange)="changeNameGroup($event)" value="{{groupName}}">
           </ion-input>
         </ion-item>
       </ion-col>
